# piing

./: Cargo.toml  README.fr_ca.md  README.md  app.rc  build.rs  check-all.ps1  clippy.toml  icons.rc  invoke-internet-outage.ps1  make-icon.ps1  revam-p.md  update.ps1
resources/: app.rc  make-all-icons.ps1
src/: config.rs  home.rs  lib.rs  logging.rs  main.rs  ping.rs  runtime.rs  sound.rs  vpn_detector.rs
src/cli/: global_args.rs  mod.rs
src/cli/command/: command.rs  mod.rs
src/cli/command/audit/: audit_args.rs  mod.rs
src/cli/command/home/: home_args.rs  mod.rs
src/cli/command/host/: host_add_args.rs  host_args.rs  host_command.rs  host_list_args.rs  host_remove_args.rs  mod.rs
src/cli/command/interval/: interval_args.rs  interval_command.rs  interval_set_args.rs  interval_show_args.rs  mod.rs
src/cli/command/mode/: mod.rs  mode_args.rs  mode_command.rs  mode_set_args.rs  mode_show_args.rs
src/cli/command/run/: mod.rs  run_args.rs
src/cli/command/sound/: mod.rs  sound_args.rs  sound_command.rs
src/cli/command/vpn/: mod.rs
src/cli/command/vpn/adapter/: add.rs  get_path.rs  list.rs  mod.rs  remove.rs
src/cli/command/vpn/check/: mod.rs
src/config/: config_manager.rs  config_paths.rs  config_snapshot.rs  global.rs  log_latency.rs  manager.rs  mod.rs  paths.rs  problem_sound.rs  snapshot.rs  store.rs  targets.rs  vpn.rs  vpn_criteria.rs  vpn_criterion.rs
src/config/vpn_criteria/: criteria.rs  criterion.rs  criterion_properties.rs  mod.rs
src/tray/: mod.rs  window_proc.rs
src/ui/: dialogs.rs  mod.rs
yapping/: 2025-12-01.revamp.md  2025-12-07.command refactor.md
