[package]
name = "piing"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
humantime = "2.2.0"
ping = "0.5.2"
reqwest = "0.12.20"
teamy-windows = { version = "0.3.0", features = ["tracing-subscriber"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_UI_Shell"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization for better performance.
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1 # Most optimized when using a single thread to compile; max context
panic = "abort"   # Smallest panic code size.

[build-dependencies]
embed-resource = "3.0.6"
